css/style.css
.navbar {
    margin: 5px !important;
}

.navbar .nav .li{
	white-space: nowrap;
}



.navbar-header {
	float: left;
}

.navbar-nav {
	float: right;
}


#search-area {
	/*background-color: red;*/
    position: absolute;
    top: 0;
    right: 0;
    padding-top: 60px;
    padding-right: 20px;
    z-index: 1;
    width: 300px;
}

#info{
	background-color: white;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 250px;
    max-height: 400px;
    padding: 10px;
    overflow: scroll;
}

#info-min {
    background-color: white;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 250px;
    height: 30px;
    z-index: 99;
    padding: 10px;
}

#fourSq {
    border: 2px solid;
    border-color: blue;
    padding: 5px;
    margin-top: 10px;
}

.info-image {
    max-width: 150px;
}

#list-view {
	/*background-color: green;*/
    line-height: 1;
    position: absolute;
    padding-top: 100px;
    padding-right: 20px;
    top: 0;
    right: 0;
    max-height: 100%;
    width: 300px;
    overflow: scroll;
    z-index: -1;
}

.list-group {
    overflow: hidden;
}


#map{
	/*background-color: yellow;*/
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -2;
}

#footer{
	background-color: gray;
}

.navbar-right {
	margin-right: 0 !important;
}

h3 {
    font-size: 18px;
    margin-top: 10px;
    margin-bottom: 7px;
}

h4 {
    font-size: 16px;
    margin-top: 9px;
    margin-bottom: 6px;
}

@media (max-width: 300px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
  		display:block !important;
	}
}

@media (max-width: 750px) {
    #list-view {
        max-height: 206px;
    }

    #info {
        max-height: 200px;
    }

    .info-image {
        max-width: 100px;
    }
}

@media (max-width: 600px) {
    #list-view {
        width: 100%;
        padding-left: 20px;
    }

    #info {
        width: 100%;
    }

    #info-min {
        width: 100%;
    }
}

